force-app/main/default/objects/Log__e/Log__e.object-meta.xml
<CustomObject>
    <description>Custom platform event to leverage the functionality of advanced logging using custom objects</description>
    <label>Log</label>
    <pluralLabel>Logs</pluralLabel>
</CustomObject>