force-app/main/default/objects/Log__e/fields/Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Name__c</fullName>
    <description>To capture the apex class/trigger from where the log event has been published</description>
    <label>Apex Class Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>