force-app/main/default/objects/Log__e/fields/AsyncApexJobId__c.field-meta.xml
<CustomField>
    <fullName>AsyncApexJobId__c</fullName>
    <description>Capture the Batch job Id, if present</description>
    <label>AsyncApexJobId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>