force-app/main/default/objects/Log__e/fields/JobScope__c.field-meta.xml
<CustomField>
    <fullName>JobScope__c</fullName>
    <description>Captures the batch job scope, if running a Batch/Queueable apex</description>
    <label>JobScope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>