force-app/main/default/objects/Log__e/fields/Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Log_Type__c</fullName>
    <description>Determines whether the log is a info/exception</description>
    <label>Log Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>