force-app/main/default/objects/Log__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Captures log message for each log event</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>