force-app/main/default/objects/Log__e/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <description>Used to determine the unique app log</description>
    <label>UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>